...
                    <view key="view" contentMode="scaleToFill" id="zA8-oi-N0J">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bgw-ud-6zf">
                                <rect key="frame" x="16" y="196" width="382" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="titleLabel"/>
                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="34"/>
                                <color key="textColor" red="0.12941176469999999" green="0.12941176469999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This application will reverse your words. Please type text below " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstra
                                <rect key="frame" x="34" y="252" width="346" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="descriptionLabel"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <color key="textColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59954268099999997" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gHg-r2-WWb" customClass="ReverseTextField" customModule="Reverse_Words_App__Storybord_" customModuleProvider="target">
                                <rect key="frame" x="16" y="332" width="382" height="21.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="reverseTextField"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="textFildEditingChanged:" destination="d2o-Gf-2rO" eventType="editingChanged" id="9yX-DQ-IXB"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8CO-QH-Ctl" customClass="ReverseButton" customModule="Reverse_Words_App__Storybord_" customModuleProvider="target">
                                <rect key="frame" x="16" y="742" width="382" height="54"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="reverseButton"/>
                                <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="17" maxX="0.0" maxY="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Reverse">
...
                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </navigationBarAppearance>
                            </navigationBar>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pxN-Gr-hoe" customClass="LineView" customModule="Reverse_Words_App__Storybord_" customModuleProvider="target">
                                <rect key="frame" x="16" y="372.5" width="382" height="1"/>
                                <color key="backgroundColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="lineView"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="1" id="4XG-b0-pj6"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KVX-rp-nHh">
                                <rect key="frame" x="16" y="398" width="382" height="35"/>
...
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BIX-SG-0nF">
                                                <rect key="frame" x="0.0" y="0.0" width="58" height="35"/>
                                                <subviews>
                                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xL0-hO-ayY">
                                                        <rect key="frame" x="0.0" y="0.0" width="58" height="35"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="24"/>
                                                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
